--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mogcha",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "devDependencies": {
     "@babel/cli": "^7.7.5",
@@ -11,7 +11,8 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "babel-build": "babel src -d dist"
   },
   "author": "",
   "license": "MIT",
