--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     [
 		"@babel/preset-env", { 
 			"targets": { 
-				"browsers": ["> 1%", "last 2 versions", "ie 11"]
+				"browsers": ["> 1%", "last 2 versions", "ie >= 9"]
 			},
 			"useBuiltIns" : "usage",
 			"corejs": 3
