--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "moglog",
-  "version": "1.2.0",
+  "version": "2.0.2",
   "description": "",
   "scripts": {
-    "build": "webpack",
-    "babel-build": "babel src -d dist"
+    "build": "npm run tsc & npm run minify",
+    "build.legacy": "npm run tsc.legacy && npm run minify.legacy",
+    "tsc": "tsc",
+    "tsc.legacy": "tsc --project tsconfig.es5.json",
+    "minify": "npx uglifyjs ./dist/moglog.js --output ./dist/moglog.min.js --mangle",
+    "minify.legacy": "npx uglifyjs ./dist/moglog.es5.js --output ./dist/moglog.es5.min.js --mangle"
   },
-  "author": "",
+  "author": "EXIzT",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "babel-loader": "^8.2.2",
     "typescript": "^4.3.4",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {
-    "core-js": "^3.15.1"
+    "uglify-js": "^3.13.10"
   }
 }
