--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "moglog",
+  "name": "exizt.toc",
   "version": "2.0.3",
   "description": "",
   "scripts": {
     "build": "npm run tsc & npm run minify",
-    "build.legacy": "npm run tsc.legacy && npm run minify.legacy",
     "tsc": "tsc",
-    "tsc.legacy": "tsc --project tsconfig.es5.json",
-    "minify": "npx uglifyjs ./dist/moglog.js --output ./dist/moglog.min.js --mangle",
-    "minify.legacy": "npx uglifyjs ./dist/moglog.es5.js --output ./dist/moglog.es5.min.js --mangle"
+    "tsc.t": "tsc ./src/moglog.ts --outDir ./dist --target es2016 --declaration --removeComments",
+    "minify": "npx uglifyjs ./dist/moglog.js --output ./dist/moglog.min.js --mangle"
   },
-  "author": "EXIzT",
+  "author": "exizt",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "shx": "^0.3.4",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.3.4",
-    "uglify-js": "^3.13.10"
+    "uglify-js": "^3.13.10",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
