--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 
     /* Modules */
     /* (none, commonjs, amd, umd, system, es6/es2015, es2020, es2022, esnext, node16, nodenext) */
-    "module": "none",                                /* Specify what module code is generated. */
+    //"module": "none",                                /* Specify what module code is generated. */
+    "module": "ESNext",                                /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
