--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build": "npm run tsc & npm run webpack",
     "tsc": "tsc ./src/moglog.ts --outDir ./dist --target es2016 --declaration --removeComments",
     "webpack": "npx webpack --mode production",
-    "webpack.dev": "npx webpack --mode development",
-    "minify": "npx uglifyjs ./dist/moglog.js --output ./dist/moglog.min.js --mangle"
+    "webpack.dev": "npx webpack --mode development"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
@@ -27,7 +26,6 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.3.4",
-    "uglify-js": "^3.13.10",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
