--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run tsc & npm run webpack",
+    "build": "npm run tsc & npm run webpack & npm run dist.css",
     "tsc": "tsc ./src/moglog.ts --outDir ./dist --target es2016 --declaration --removeComments",
     "webpack": "npx webpack --mode production",
-    "webpack.dev": "npx webpack --mode development"
+    "webpack.dev": "npx webpack --mode development",
+    "dist.css": "shx cp ./src/css/moglog.css ./dist"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
