--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
-# Enforce Unix newlines
-* text=auto eol=lf
+# autocrlf
+* text=auto
 
 # Don't diff
-package-lock.json binary
+package-lock.json text -diff
 
 # ignore github repo languages
 *.js linguist-vendored
